# dbsage

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  lefthook.yml  pyproject.toml
.github/workflows/: ci.yml
config/: blacklist_tables.example.json  connections.example.json  semantic_schema.example.json  semantic_schema.json
docs/: contributing.md  multi-connection.md  semantic.md  tools.md
landing/: README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
landing/src/: app.css  app.html  test-setup.ts
landing/src/lib/components/: Footer.svelte  Guarantee.svelte  Hero.svelte  Install.svelte  Install.test.ts  Nav.svelte  Terminal.svelte  ToolsGrid.svelte
landing/src/lib/data/: blocked.test.ts  blocked.ts  tools.test.ts  tools.ts
landing/src/routes/: +page.server.ts  +page.svelte
src/dbsage/: exceptions.py
src/dbsage/cache/: schema_cache.py
src/dbsage/db/: connection_pool.py  connection_registry.py  query_executor.py  query_rewriter.py  query_validator.py
src/dbsage/formatting/: table_formatter.py
src/dbsage/logging_/: query_logger.py
src/dbsage/mcp_server/: config.py  dependencies.py  server.py
src/dbsage/schema/: schema_explorer.py
src/dbsage/semantic/: semantic_loader.py
src/dbsage/tools/: comparison_tools.py  connection_tools.py  discovery_tools.py  profile_tools.py  query_tools.py  sampling_tools.py  schema_tools.py  semantic_tools.py
tests/: test_comparison_tools.py  test_config.py  test_connection_config.py  test_connection_pool.py  test_connection_registry.py  test_connection_tools.py  test_profile_tools.py  test_query_executor.py  test_query_logger.py  test_query_rewriter.py  test_query_validator.py  test_schema_cache.py  test_schema_explorer.py  test_semantic.py  test_table_formatter.py  test_tools.py
