[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbsage"
version = "0.1.0"
description = "AI Database Copilot — MCP server for safe LLM database access"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "sqlalchemy>=2.0",
    "aiomysql>=0.2",
    "asyncpg>=0.29",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "cachetools>=5.0",
    "wcwidth>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "bandit",
    "sqlalchemy[mypy]",
]

[project.scripts]
dbsage = "dbsage.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dbsage"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "N"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/dbsage --cov-report=term-missing --cov-fail-under=80"
